<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_republicans"
    tools:context="grube.eric.com.ontheissues2016.Republicans">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/banner_vote"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|bottom"
            android:id="@+id/linearLayout">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/donaldTrump"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/donaldtrump"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    android:transitionName="@string/iconTransition"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/donaldTrump"
                    android:textColor="#000000"
                    android:layout_below="@+id/donaldTrump"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/benCarson"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/bencarson"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/benCarson"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/benCarson"
                    android:textColor="#000000"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/carlyFiorina"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="false"
                    android:background="@drawable/carlyfiorina"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/carlyFiorina"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/carlyFiorina"
                    android:textColor="#000000"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_vertical"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight=".5">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/jebBush"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/jebbush"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/jebBush"
                    android:textColor="#000000"
                    android:layout_below="@+id/jebBush"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/marcoRubio"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/marcorubio"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/marcoRubio"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/marcoRubio"
                    android:textColor="#000000"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/randPaul"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="false"
                    android:background="@drawable/randpaul"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/randPaul"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/randPaul"
                    android:textColor="#000000"/>
            </RelativeLayout>
        </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_vertical"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight=".5">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/tedCruz"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="false"
                android:background="@drawable/tedcruz"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tedCruz"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:text="@string/tedCruz"
                android:textColor="#000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/lvJohn"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="false"
                android:background="@drawable/johnkasich"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lvJohn"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:text="@string/johnKasich"
                android:textColor="#000000"/>
        </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
