<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_democrats"
    tools:context="grube.eric.com.ontheissues2016.Democrats">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@drawable/banner_vote"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|bottom"
            android:id="@+id/linearLayout">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/hillaryClinton"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/hillaryclinton"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/hillaryClinton"
                    android:textColor="#000000"
                    android:layout_below="@+id/hillaryClinton"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/bernieSanders"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/berniesanders"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bernieSanders"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/bernieSanders"
                    android:textColor="#000000"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/joeBiden"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="false"
                    android:background="@drawable/joebiden"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription"
                    >
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/joeBiden"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/joeBiden"
                    android:textColor="#000000"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_vertical"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight=".5">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/martinOmalley"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/martinomalley"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/martinOmalley"
                    android:textColor="#000000"
                    android:layout_below="@+id/martinOmalley"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/lincolnChafee"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/lincolnchafee"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lincolnChafee"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/lincolnChafee"
                    android:textColor="#000000"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/jimWebb"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="false"
                    android:background="@drawable/jimwebb"
                    android:layout_centerHorizontal="true"
                    tools:ignore="ContentDescription">
                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/jimWebb"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/jimWebb"
                    android:textColor="#000000"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
